# active_slam

./: .gitignore  CMakeLists.txt  README.md
raspberry_pi_ws/aarch64_build/turtlebot_control/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__turtlebot_control_msg.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json  turtlebot_control
raspberry_pi_ws/aarch64_build/turtlebot_control/ament_cmake_core/: package.cmake
raspberry_pi_ws/aarch64_build/turtlebot_control/ament_cmake_core/stamps/: Keypoints.msg.stamp  ament_cmake_export_include_directories-extras.cmake.stamp  ament_cmake_export_libraries-extras.cmake.stamp  rosidl_cmake_export_typesupport_targets-extras.cmake.stamp
raspberry_pi_ws/aarch64_build/turtlebot_control/ament_cmake_environment_hooks/: local_setup.dsv
raspberry_pi_ws/aarch64_build/turtlebot_control/ament_cmake_python/turtlebot_control/turtlebot_control.egg-info/: PKG-INFO
raspberry_pi_ws/aarch64_build/turtlebot_control/rosidl_adapter/: turtlebot_control_msg.idls
raspberry_pi_ws/aarch64_build/turtlebot_control/rosidl_generator_py/turtlebot_control/: _turtlebot_control_s.ep.rosidl_typesupport_c.c
raspberry_pi_ws/aarch64_build/turtlebot_control/rosidl_typesupport_c/turtlebot_control/msg/: keypoints__type_support.cpp
raspberry_pi_ws/aarch64_build/turtlebot_control/rosidl_typesupport_cpp/turtlebot_control/msg/: keypoints__type_support.cpp
raspberry_pi_ws/aarch64_build/turtlebot_control/rosidl_typesupport_fastrtps_cpp/turtlebot_control/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
raspberry_pi_ws/aarch64_build/turtlebot_control/turtlebot_control_msg__py/: CTestTestfile.cmake  Makefile  cmake_install.cmake
raspberry_pi_ws/aarch64_install/turtlebot_control/lib/turtlebot_control/: turtlebot_control
raspberry_pi_ws/aarch64_install/turtlebot_control/share/turtlebot_control/: local_setup.sh  package.sh  package.xml
raspberry_pi_ws/aarch64_install/turtlebot_control/share/turtlebot_control/cmake/: export_turtlebot_control_msg__rosidl_generator_cExport.cmake  export_turtlebot_control_msg__rosidl_generator_pyExport.cmake  export_turtlebot_control_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  turtlebot_control_msg__rosidl_typesupport_cExport-noconfig.cmake  turtlebot_control_msg__rosidl_typesupport_cppExport.cmake  turtlebot_control_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake
raspberry_pi_ws/aarch64_install/turtlebot_control/share/turtlebot_control/msg/: Keypoints.idl
raspberry_pi_ws/install/: local_setup.sh  setup.sh  setup.zsh
raspberry_pi_ws/install/turtlebot_control/lib/turtlebot_control/: turtlebot_control
raspberry_pi_ws/install/turtlebot_control/share/turtlebot_control/: local_setup.sh  package.dsv  package.ps1  package.sh
raspberry_pi_ws/install/turtlebot_control/share/turtlebot_control/cmake/: ament_cmake_export_dependencies-extras.cmake  export_turtlebot_control_msg__rosidl_generator_pyExport.cmake  export_turtlebot_control_msg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  turtlebot_controlConfig.cmake  turtlebot_control_msg__rosidl_typesupport_introspection_cppExport.cmake
raspberry_pi_ws/log/: latest_build
raspberry_pi_ws/src/turtlebot_control/: CMakeLists.txt  README.md  package.xml
raspberry_pi_ws/src/turtlebot_control/include/: options.hpp  rgb_lights.hpp
raspberry_pi_ws/src/turtlebot_control/launch/: turtle_control.launch.xml
raspberry_pi_ws/src/turtlebot_control/src/: cam2image.cpp  cam2img.cpp  turtlebot_control.cpp
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros_ws/install/img_transform/lib/img_transform/: img_transform  video_frequency
ros_ws/install/img_transform/share/img_transform/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/img_transform/share/img_transform/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+19 more)
ros_ws/log/: latest_build
ros_ws/src/active_slam/img_transform/: CMakeLists.txt  README.md  package.xml
ros_ws/src/active_slam/img_transform/config/: diff_params.yaml  encoders.rviz  transform.rviz
ros_ws/src/active_slam/img_transform/data/: meg_data.g2o
ros_ws/src/active_slam/img_transform/include/img_transform/: graph.hpp  transform.hpp
ros_ws/src/active_slam/img_transform/launch/: active_slam.launch.xml  encoder_odom.launch.xml  transform.launch.xml
ros_ws/src/active_slam/img_transform/msg/: FrameID.msg  Nodes.msg  Odom.msg  Transform.msg  Waypoint.msg
ros_ws/src/active_slam/img_transform/src/: active_learning.cpp  graph.cpp  img_transform.cpp  reconstruction.cpp  registration.cpp  se_sync.cpp  sesync_test.cpp  test_node.cpp  test_slam_node.cpp  transform.cpp  wheel_control.cpp  wheel_encoder.cpp
ros_ws/src/active_slam/turtlelib/: CMakeLists.txt  README.md
ros_ws/src/active_slam/turtlelib/include/turtlelib/: circle_detection.hpp  diff_drive.hpp  discriminant.hpp  rigid2d.hpp
ros_ws/src/active_slam/turtlelib/src/: circle_detection.cpp  diff_drive.cpp  discriminant.cpp  frame_main.cpp  rigid2d.cpp
ros_ws/src/active_slam/turtlelib/tests/: tests.cpp
ros_ws/src/img_transform/: CMakeLists.txt  package.xml
ros_ws/src/img_transform/config/: transform.rviz
ros_ws/src/img_transform/include/img_transform/: sort.hpp  transform.hpp
ros_ws/src/img_transform/launch/: transform.launch.xml
ros_ws/src/img_transform/src/: cpl_slam_node.cpp  img_transform.cpp  sort.cpp  transform.cpp  video_frequency.cpp  wheel_control.cpp
src/: camera_calibration.cpp  capture_image.cpp  feature_matching.cpp  image_stitching.cpp
(+58 files in other folders)
